--- a/Labs/lab1/src/main/resources/templates/register.html
+++ b/Labs/lab1/src/main/resources/templates/register.html
@@ -16,33 +16,47 @@
 
 
 <div class="container p-5">
-
     <div class="row">
         <h4>Registration</h4>
     </div>
     <div class="col-md-6">
-        <form method="post">
+        <form method="post" action="#" th:action="@{/register}" th:object="${registrationVM}">
             <div class="form-group">
                 <label class="col-form-label" for="name">Name</label>
-                <input id="name" name="name" type="text" class="form-control" placeholder="name" value=""/>
-                <label class="col-form-label" for="surname">Surname</label>
-                <input id="surname" name="surname" type="text" class="form-control" placeholder="surname" value=""/>
-                <label fclass="col-form-label" or="mail">Mail</label>
-                <input id="mail" name="mail" type="text" class="form-control" placeholder="email" value=""/>
-                <label class="col-form-label" for="pass1">Password</label>
-                <input id="pass1" name="pass1" type="password" class="form-control" placeholder="password" value=""/>
-                <label class="col-form-label" for="pass2">Repeat password</label>
-                <input id="pass2" name="pass2" type="password" class="form-control" placeholder="repeat password"
+                <input id="name" name="name" th:field="*{name}" type="text" class="form-control" placeholder="name"
                        value=""/>
-            </div>
-            <div class="form-check">
-                <input type="submit" class="btnSubmit" value="Register"/>
 
+                <label class="col-form-label" for="surname">Surname</label>
+                <input id="surname" name="surname" th:field="*{surname}" type="text" class="form-control"
+                       placeholder="surname" value=""/>
+
+                <label class="col-form-label" for="mail">Mail</label>
+                <input id="mail" name="mail" th:field="*{mail}" type="text" class="form-control" placeholder="email"
+                       value=""/>
+
+                <label class="col-form-label" for="pass1">Password</label>
+                <input id="pass1" name="pass1" th:field="*{pass1}" type="password" class="form-control"
+                       placeholder="password" value=""/>
+
+                <label class="col-form-label" for="pass2">Repeat password</label>
+                <input id="pass2" name="pass2" th:field="*{pass2}" type="password" class="form-control"
+                       placeholder="repeat password"
+                       value=""/>
+
+                <p class="col-form-label"> Do you agree to Privacy Rules?</p>
+                <input id="consent"
+                       type="checkbox"
+                       th:field="*{privacyConsent}">
+                <label class="col-form-label" for="consent">I agree.</label>
+
+                <div class="form-check">
+                    <input type="submit" class="btnSubmit" value="Register"/>
+                </div>
             </div>
         </form>
 
-        <div class="row">
-            <div th:text="${message}"></div>
+        <div class="row alert-danger">
+            <div th:utext="${message}"></div>
         </div>
     </div>
 </div>
