Modified register.html and login.html

--- a/Labs/lab1/src/main/resources/templates/login.html
+++ b/Labs/lab1/src/main/resources/templates/login.html
@@ -7,42 +7,15 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
         .login-container {
-            margin-top: 5%;
+            margin-top: 1%;
             margin-bottom: 5%;
-        }
-
-        .login-form-1 {
-            padding: 5%;
-            box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
-        }
-
-        .login-form-1 h3 {
-            text-align: center;
-            color: #333;
+            width: auto;
+            max-width: 30%;
+            min-width: 20%;
         }
 
         .login-container form {
-            padding: 10%;
-        }
-
-        .btnSubmit {
-            width: 50%;
-            border-radius: 1rem;
-            padding: 1.5%;
-            border: none;
-            cursor: pointer;
-        }
-
-        .login-form-1 .btnSubmit {
-            font-weight: 600;
-            color: #fff;
-            background-color: #0062cc;
-        }
-
-        .login-form-1 .ForgetPwd {
-            color: #0062cc;
-            font-weight: 600;
-            text-decoration: none;
+            padding: 5%;
         }
     </style>
 </head>
