--- a/Labs/lab1/src/main/resources/templates/login.html
+++ b/Labs/lab1/src/main/resources/templates/login.html
@@ -20,26 +20,36 @@
     </style>
 </head>
 <body>
-<div class="container col-md-6 p-5">
-    <h3>Login</h3>
-    <form method="post">
-        <div class="form-group">
-            <input name="mail" type="text" class="form-control" placeholder="email" value=""/>
-        </div>
-        <div class="form-group">
-            <input name="pass" type="password" class="form-control" placeholder="password" value=""/>
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btnSubmit" value="Login"/>
-        </div>
-        <!--<div class="form-group">
-            <a href="#" class="ForgetPwd">Forget Password?</a>
-        </div>-->
-    </form>
-    <div class="row">
-        <div th:text="${message}"></div>
-    </div>
+
+
+<div class="navbar navbar-nav navbar-dark">
+    <h3>Laboratorio Applicazioni Internet - lab1</h3>
 </div>
+
+
+<div class="container login-container">
+
+    <div class="col-md-12">
+        <div class="row" style="align-content: center">
+            <h4>Login</h4>
+        </div>
+        <form action="#" th:action="@{/login}" th:object="${loginVM}" method="post">
+
+            <div class="form-group">
+                <label class="col-form-label" for="mail">Mail</label>
+                <input id="mail" name="mail" type="text" class="form-control" placeholder="email" value=""/>
+                <label class="col-form-label" for="pass">Password</label>
+                <input id="pass" name="pass" type="password" class="form-control" placeholder="password" value=""/>
+                <a href="#" class="ForgetPwd">Forget Password?</a>
+            </div>
+
+            <hr class="my-4">
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </form>
+        <div class="row">
+            <div th:utext="${message}"></div>
+        </div>
+    </div>
 
 </body>
 </html>
