--- a/Labs/lab1/src/main/resources/templates/register.html
+++ b/Labs/lab1/src/main/resources/templates/register.html
@@ -49,7 +49,7 @@
                        value=""/>
                 <br>
                 <div class="custom-control custom-checkbox mb-3">
-                    <input type="checkbox" class="custom-control-input" id="consent">
+                    <input type="checkbox" name="privacyConsentAccepted" class="custom-control-input" id="consent">
                     <label class="custom-control-label" for="consent">I Agree Privacy Rule</label>
                 </div>
             </div>
