--- a/Labs/lab1/src/main/resources/templates/login.html
+++ b/Labs/lab1/src/main/resources/templates/login.html
@@ -40,7 +40,6 @@
                 <input id="mail" name="mail" type="text" class="form-control" placeholder="email" value=""/>
                 <label class="col-form-label" for="pass">Password</label>
                 <input id="pass" name="pass" type="password" class="form-control" placeholder="password" value=""/>
-                <a href="#" class="ForgetPwd">Forget Password?</a>
             </div>
 
             <hr class="my-4">
@@ -50,6 +49,6 @@
             <div th:utext="${message}"></div>
         </div>
     </div>
-
+</div>
 </body>
 </html>
