--- a/Labs/lab1/src/main/resources/templates/register.html
+++ b/Labs/lab1/src/main/resources/templates/register.html
@@ -64,7 +64,7 @@
         </form>
 
         <div class="row">
-            <div th:utext="${message}"></div>
+            <!--div th:utext="${message}"></div-->
         </div>
     </div>
 </div>
