--- a/Labs/lab1/src/main/resources/templates/login.html
+++ b/Labs/lab1/src/main/resources/templates/login.html
@@ -26,6 +26,23 @@
     <h3>Laboratorio Applicazioni Internet - lab1</h3>
 </div>
 
+<nav class="navbar navbar-dark bg-dark">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+    </ul>
+    <span class="navbar-text">
+         <div class="row">
+        <div class="col-md-6 col-lg-6">
+            <a href="/login">Login</a>
+        </div>
+        <div class="col-md-6 col-lg-6">
+            <a href="/register">Register</a>
+        </div>
+    </div>
+    </span>
+</nav>
 
 <div class="container login-container">
 
@@ -37,18 +54,16 @@
 
             <div class="form-group">
                 <label class="col-form-label" for="mail">Mail</label>
-                <input id="mail" name="mail" th:field="*{mail}" type="text" class="form-control" placeholder="email" value=""/>
-                <p th:if="${#fields.hasErrors('mail')}" th:errors="*{mail}"></p>
+                <input id="mail" name="mail" type="email" class="form-control" placeholder="email" value="" th:required="required"/>
                 <label class="col-form-label" for="pass">Password</label>
-                <input id="pass" name="pass" th:field="*{pass}"  type="password" class="form-control" placeholder="password" value=""/>
-                <p th:if="${#fields.hasErrors('pass')}" th:errors="*{pass}"></p>
+                <input id="pass" name="pass" type="password" class="form-control" placeholder="password" value="" th:required="required"/>
             </div>
 
             <hr class="my-4">
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
-        <div class="row">
-            <!--div th:utext="${message}"></div-->
+        <div>
+            <div class="alert-danger" role="alert" style="text-align: center" th:utext="${message}"></div>
         </div>
     </div>
 </div>
