--- a/Labs/lab1/src/main/resources/templates/register.html
+++ b/Labs/lab1/src/main/resources/templates/register.html
@@ -26,7 +26,23 @@
     <h3>Laboratorio Applicazioni Internet - lab1</h3>
 </div>
 
-<a href="/">Home</a>
+<nav class="navbar navbar-dark bg-dark">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+    </ul>
+    <span class="navbar-text">
+         <div class="row">
+        <div class="col-md-6 col-lg-6">
+            <a href="/login">Login</a>
+        </div>
+        <div class="col-md-6 col-lg-6">
+            <a href="/register">Register</a>
+        </div>
+    </div>
+    </span>
+</nav>
 
 <div class="container login-container">
 
@@ -37,24 +53,24 @@
         <form action="#" th:action="@{/register}" th:object="${registrationVM}" method="post">
             <div class="form-group">
                 <label class="col-form-label" for="name">Name</label>
-                <input id="name" name="name" th:field="*{name}" type="text" class="form-control" placeholder="name" value=""/>
-                <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+                <input id="name" name="name" th:field="*{name}" type="text" class="form-control" placeholder="name" value="" required/>
+                <p class="alert-warning" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
                 <label class="col-form-label" for="surname">Surname</label>
-                <input id="surname" name="surname" th:field="*{surname}" type="text" class="form-control" placeholder="surname" value=""/>
-                <p th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></p>
+                <input id="surname" name="surname" th:field="*{surname}" type="text" class="form-control" placeholder="surname" value="" required/>
+                <p class="alert-warning" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></p>
                 <label class="col-form-label" for="mail">Mail</label>
-                <input id="mail" name="mail" th:field="*{mail}" type="text" class="form-control" placeholder="email" value=""/>
-                <p th:if="${#fields.hasErrors('mail')}" th:errors="*{mail}"></p>
+                <input id="mail" name="mail" th:field="*{mail}" type="text" class="form-control" placeholder="email" value="" required/>
+                <p class="alert-warning" th:if="${#fields.hasErrors('mail')}" th:errors="*{mail}"></p>
                 <label class="col-form-label" for="pass1">Password</label>
-                <input id="pass1" name="pass1" th:field="*{pass1}" type="password" class="form-control" placeholder="password" value=""/>
-                <p th:if="${#fields.hasErrors('pass1')}" th:errors="*{pass1}"></p>
+                <input id="pass1" name="pass1" th:field="*{pass1}" type="password" class="form-control" placeholder="password" value="" required/>
+                <p class="alert-warning" th:if="${#fields.hasErrors('pass1')}" th:errors="*{pass1}"></p>
                 <label class="col-form-label" for="pass2">Repeat password</label>
-                <input id="pass2" name="pass2" th:field="*{pass2}" type="password" class="form-control" placeholder="repeat password" value=""/>
-                <p th:if="${#fields.hasErrors('pass2')}" th:errors="*{pass2}"></p>
+                <input id="pass2" name="pass2" th:field="*{pass2}" type="password" class="form-control" placeholder="repeat password" value="" required/>
+                <p class="alert-warning" th:if="${#fields.hasErrors('pass2')}" th:errors="*{pass2}"></p>
 
                 <br>
                 <div class="custom-control custom-checkbox mb-3">
-                    <input type="checkbox" name="privacyConsentAccepted" class="custom-control-input" id="consent">
+                    <input type="checkbox" name="privacyConsentAccepted" class="custom-control-input" id="consent" required>
                     <label class="custom-control-label" for="consent">I Agree Privacy Rule</label>
                 </div>
             </div>
@@ -62,9 +78,8 @@
             <hr class="my-4">
             <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
         </form>
-
-        <div class="row">
-            <!--div th:utext="${message}"></div-->
+        <div>
+            <div class="alert-danger" role="alert" style="text-align: center" th:utext="${message}"></div>
         </div>
     </div>
 </div>
