--- a/Labs/lab5/client/src/styles.css
+++ b/Labs/lab5/client/src/styles.css
@@ -1,1 +1,102 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+body {
+    margin: 0px;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.main-content {
+    margin: 16px;
+}
+
+.present {
+    color: blue;
+    font-weight: bold;
+}
+
+.compact-card {
+    max-width: 400px;
+    align-content: center;
+    align-self: center;
+}
+
+.align-center {
+    align-content: center;
+    align-self: center;
+    text-align: center;
+}
+
+.centered {
+    margin: auto;
+}
+
+ul li {
+    display: inline;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+}
+
+ul {
+    padding-inline-start: 0%
+}
+
+:host /deep/ .mat-paginator {
+    margin-left: auto;
+}
+
+:host /deep/ .mat-paginator-container {
+    min-height: 0px;
+}
+
+:host /deep/ .mat-paginator-range-label {
+    display: none;
+}
+
+.timeline {
+    position: relative;
+    margin: 0 auto;
+}
+
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 3px;
+    background-color: #ccc;
+    top: 8px;
+    bottom: 0;
+    left: 8px;
+    margin-left: -0px;
+}
+
+.container {
+    padding: 0px 10px;
+    position: relative;
+}
+
+.line.container::after {
+    content: '';
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    margin-left: 5px;
+    background-color: #ccc;
+    border: 4px solid #aaa;
+    top: 8px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.right {
+    left: 8px;
+}
+
+.right::after {
+    left: -16px;
+}
+
+.content {
+    padding: 8px 0px 0px 16px;
+    position: relative;
+}
