--- a/Project/Client/src/app/components/app/app.component.html
+++ b/Project/Client/src/app/components/app/app.component.html
@@ -1,1 +1,42 @@
-<router-outlet></router-outlet>
+<div class="main-container" [class.is-mobile]="mobileQuery.matches">
+
+    <mat-toolbar color="primary" class="app-toolbar">
+        <button mat-icon-button (click)="snav.toggle()">
+            <mat-icon class="material-icons">menu</mat-icon>
+        </button>
+        <h1 class="app-name" routerLink="/">Pedibus</h1>
+        <span class="fill-remaining-space"></span>
+        <button *ngIf="!loggedStatus && !mobileQuery.matches" mat-button routerLink="/auth/login">
+            <span>Login</span>
+        </button>
+        <button *ngIf="loggedStatus && !mobileQuery.matches" mat-button routerLink="/auth/logout">
+            <span>Logout</span>
+        </button>
+    </mat-toolbar>
+
+    <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+        <mat-sidenav opened="true" class="sidenav" #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+            <mat-nav-list>
+                <a mat-list-item *ngIf="loggedStatus" routerLink="./home">Home</a>
+                <a mat-list-item *ngIf="loggedStatus" routerLink="./admin">Admin</a>
+                <a mat-list-item *ngIf="loggedStatus" routerLink="./companion">Companion</a>
+                <a mat-list-item routerLink="./lines">Lines</a>
+                <a mat-list-item *ngIf="loggedStatus" routerLink="./settings">Settings</a>
+                <button *ngIf="!loggedStatus && mobileQuery.matches" mat-button routerLink="/auth/login">
+                    <span>Login</span>
+                </button>
+                <button *ngIf="loggedStatus && mobileQuery.matches" mat-button routerLink="/auth/logout">
+                    <span>Logout</span>
+                </button>
+            </mat-nav-list>
+        </mat-sidenav>
+
+        <mat-sidenav-content>
+            <!-- Content of the selected section -->
+            <div class="main-content">
+                <router-outlet></router-outlet>
+            </div>
+        </mat-sidenav-content>
+    </mat-sidenav-container>
+
+</div>
