--- a/Project/Client/src/app/components/app/app.component.html
+++ b/Project/Client/src/app/components/app/app.component.html
@@ -14,8 +14,8 @@
         </button>
     </mat-toolbar>
 
-    <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-        <mat-sidenav opened="true" class="sidenav" #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+    <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 60 : 0">
+        <mat-sidenav opened="true" class="sidenav" #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="true" fixedTopGap="56">
             <mat-nav-list>
                 <a mat-list-item *ngIf="loggedStatus" routerLink="./home">Home</a>
                 <a mat-list-item *ngIf="loggedStatus" routerLink="./admin">Admin</a>
@@ -32,11 +32,31 @@
         </mat-sidenav>
 
         <mat-sidenav-content>
-            <!-- Content of the selected section -->
-            <div class="main-content">
-                <router-outlet></router-outlet>
+            <div class="full-height">
+                <!-- Content of the selected section -->
+                <div class="main-content">
+                    <router-outlet></router-outlet>
+                </div>
+
+                <span class="fill-remaining-space"></span>
+
+                <div class="footer">
+                    <mat-toolbar color='primary' id="copyright">
+                        <span class='spacer'></span>
+                        <h3>© Brucolini19 - Pedibus 2019 progetto Applicazioni Internet</h3>
+                        <span class='spacer'></span>
+                    </mat-toolbar>
+
+                    <mat-toolbar color='secondary' id="contacts">
+                        <p>Pedibus - Politecnico di Torino</p>
+                        <span class='spacer'></span>
+                        <p>Contact: brucolini19@gmail.com</p>
+                    </mat-toolbar>
+                </div>
             </div>
         </mat-sidenav-content>
+
+
     </mat-sidenav-container>
 
 </div>
