--- a/Project/Client/src/app/components/welcome/welcome.component.html
+++ b/Project/Client/src/app/components/welcome/welcome.component.html
@@ -2,7 +2,7 @@
 
 <div class="image-container">
     <!--<h1 class="title">Welcome to pedibus</h1>-->
-    <img src="../../../assets/LooneyTunesCity.png" alt="" />
+    <img src="../../../assets/LooneyTunesCityWithOBJ.png" alt="" />
 </div>
 
 <div class="container-grid info-container">
