--- a/Project/Client/src/app/components/welcome/welcome.component.html
+++ b/Project/Client/src/app/components/welcome/welcome.component.html
@@ -20,6 +20,6 @@
         <h3>Le nostre linee</h3>
         <img src="../../../assets/map.jpg" alt="" />
         <p>Le nostre linee coprono quasi tutto il territorio della citta di Torino. Se fossero necessarie altre Linee possono essere indicate agli amministratori.</p>
-        <button mat-raised-button color="accent" routerLink="/lines">Scopri</button>
+        <button mat-raised-button color="accent" routerLink="./lines">Scopri</button>
     </mat-card>
 </div>
