Moved register component in admin section

--- a/Project/Client/src/app/components/admin/register/register.component.html
+++ b/Project/Client/src/app/components/admin/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="padded-content">
     <mat-card class="compact-card centered">
         <p>Register User</p>
-        <div class="auth-content">
+        <div class="admin-content">
             <form [formGroup]="form" (ngSubmit)="register()">
                 <mat-form-field>
                     <mat-label>Email</mat-label>
