--- a/Project/Client/src/app/components/admin/admin.component.html
+++ b/Project/Client/src/app/components/admin/admin.component.html
@@ -1,1 +1,10 @@
-<h1>ADMIN</h1>
+<h3 class="section-title">ADMINISTRATION SECTION</h3>
+<div class="container-grid">
+
+    <app-register class="container-grid-cell register"></app-register>
+
+    <app-make-companion class="container-grid-cell make-companion"></app-make-companion>
+
+    <app-make-admin class="container-grid-cell make-admin"></app-make-admin>
+
+</div>
