Re-implementing guards + new UsersManagement component

--- a/Project/Client/src/app/components/admin/admin.component.html
+++ b/Project/Client/src/app/components/admin/admin.component.html
@@ -1,10 +1,5 @@
 <h3 class="section-title">ADMINISTRATION SECTION</h3>
 <div class="container-grid">
-
-    <app-register class="container-grid-cell register"></app-register>
-
-    <app-make-companion class="container-grid-cell make-companion"></app-make-companion>
-
-    <app-make-admin class="container-grid-cell make-admin"></app-make-admin>
-
+    <app-users-management class="register"></app-users-management>
+    <app-register class="register"></app-register>
 </div>
