--- a/Project/Client/src/app/components/admin/users-management/users-management.component.html
+++ b/Project/Client/src/app/components/admin/users-management/users-management.component.html
@@ -1,8 +1,48 @@
 <div class="padded-content">
-    <mat-card class="compact-card centered">
-        <p>User Management</p>
-        <div class="admin-content">
+    <mat-card class="compact-card">
+        <!-- <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+        </mat-form-field> -->
+        <p>Manage Users</p>
+        <table mat-table [dataSource]="dataSource">
 
-        </div>
+            <!-- Mail Column -->
+            <ng-container matColumnDef="Mail">
+                <th mat-header-cell *matHeaderCellDef> Mail </th>
+                <td mat-cell *matCellDef="let element"> {{element.mail}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="Name">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <!-- Surname Column -->
+            <ng-container matColumnDef="Surname">
+                <th mat-header-cell *matHeaderCellDef> Surname </th>
+                <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
+            </ng-container>
+
+            <!-- Roles Column -->
+            <ng-container matColumnDef="Roles">
+                <th mat-header-cell *matHeaderCellDef> Roles </th>
+                <td mat-cell *matCellDef="let element">
+                    <span *ngFor="let role of element.roles"> {{role}}</span>
+                </td>
+            </ng-container>
+
+            <!-- Action Column -->
+            <ng-container matColumnDef="Action">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell class="squeeze" *matCellDef="let element">
+                    <img src="../../../assets/edit.png" />
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator hidePageSize=true [pageSizeOptions]="[10]" pageSize="10"></mat-paginator>
     </mat-card>
 </div>
