--- a/Project/Client/src/app/components/welcome/welcome.component.html
+++ b/Project/Client/src/app/components/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Nunito:800&display=swap" rel="stylesheet">
 
-<div class="image-container" [style.height.%]="isMobile ? 8 : auto">
+<div class="image-container" [ngClass]="{ 'mobile-head-img' : isMobile }">
     <!--<h1 class="title">Welcome to pedibus</h1>-->
     <img src="../../../assets/LooneyTunesCityWithOBJ.png" alt="" />
 </div>
