Added races management component, added some models, added lines and races service, other minor fix

--- a/Project/Client/src/app/components/admin/admin.component.html
+++ b/Project/Client/src/app/components/admin/admin.component.html
@@ -1,5 +1,6 @@
 <h3 class="section-title">ADMINISTRATION SECTION</h3>
 <div class="container-grid">
-    <app-users-management class="register"></app-users-management>
-    <app-register class="register"></app-register>
+    <app-users-management></app-users-management>
+    <app-register></app-register>
+    <app-races-management></app-races-management>
 </div>
