--- a/Project/Client/src/app/components/admin/races-management/races-management.component.html
+++ b/Project/Client/src/app/components/admin/races-management/races-management.component.html
@@ -44,23 +44,23 @@
 
         <button mat-raised-button [disabled]="lineSelected==null || directionSelected==null" (click)="search()">Search</button>
 
-        <mat-table [dataSource]="dataSource">
+        <mat-table [dataSource]="dataSource" matSort>
 
             <!-- LineName Column -->
             <ng-container matColumnDef="LineName">
-                <th mat-header-cell *matHeaderCellDef> LineName </th>
+                <th class="center-vertical" mat-header-cell *matHeaderCellDef mat-sort-header> LineName </th>
                 <td mat-cell *matCellDef="let element"> {{element.lineName}} </td>
             </ng-container>
 
             <!-- Direction Column -->
             <ng-container matColumnDef="Direction">
-                <th mat-header-cell *matHeaderCellDef> Direction </th>
+                <th class="center-vertical" mat-header-cell *matHeaderCellDef mat-sort-header> Direction </th>
                 <td mat-cell *matCellDef="let element"> {{element.direction}} </td>
             </ng-container>
 
             <!-- Date Column -->
             <ng-container matColumnDef="Date">
-                <th mat-header-cell *matHeaderCellDef> Date </th>
+                <th class="center-vertical" mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
                 <td mat-cell *matCellDef="let element"> {{element.date.toDateString()}} </td>
             </ng-container>
 
@@ -74,6 +74,16 @@
             <ng-container matColumnDef="Companions">
                 <th class="squeeze center-vertical" mat-header-cell *matHeaderCellDef> Companions </th>
                 <td mat-cell class="squeeze center-vertical" *matCellDef="let element"> {{element.companions.length}} </td>
+            </ng-container>
+
+            <!-- Edit-Action Column -->
+            <ng-container matColumnDef="Remove-Action">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell class="squeeze center-vertical" *matCellDef="let element">
+                    <button mat-icon-button (click)="$event.stopPropagation();removeRace(element)">
+                        <mat-icon>delete_outline</mat-icon>
+                    </button>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
