Added dialogs for races

--- a/Project/Client/src/app/components/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/Project/Client/src/app/components/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>{{data.title}}</h2>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content class="mat-typography new-line">
     <h3>{{data.message}}</h3>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
